src/App.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,800);.legaltext {
    white-space: pre-wrap
}

body, button, input, select, textarea {
    font-family: Open Sans;
}

*, *:after, *::before {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

#main-nav {
    padding-top: 0 !important;
    padding-bottom: 0 !important;
    padding-left: 0 !important;
}

.navbar-brand {
    padding: 0 !important;
}

.primlogo {
    width: 200px;
    height: 70px;
}

.justify-content-evenly {
    justify-content: space-evenly;
}

.App {
    overflow: hidden;
    color: #f6eae1;
}

.navbar {
    font-size: 20px;
    background: #000 !important;
    opacity: 0.9;
}

.anchor {
    display: block;
    position: relative;
    top: -50px;
    visibility: hidden;
}
/*=====================================================*/
/*=====================================================*/
.splash {
    background-color: #181818;
}

.splash .asset-container {
    position: absolute;
    overflow: hidden;
    z-index: 0;
    pointer-events: none;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    -webkit-filter: brightness(70%);
    filter: brightness(70%);
}

.bg-media-hero-video {
    position: absolute;
    height: auto;
    width: auto;
    min-width: 100%;
    min-height: 100%;
    max-width: 10000%;
    max-height: 10000%;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
    pointer-events: none;
}

.title {
    font-size: 4rem;
    font-weight: 800;
    line-height: 1.125;
}

/*=====================================================*/
/*=====================================================*/
.discord {
    min-height: 830px;
}

.discord .title {
    font-size: 18vw;
    text-align: center;
    text-shadow: 0px 1px 1px #f6eae1;
    font-weight: 600;
    color: transparent;
}

.discord-image {
    width: 100%;
    box-shadow: 0px 0px 4px #111;
}

.discord .subtitle {
    font-size: 2rem;
    padding-top:1rem;
    text-align: center;
}

.discord ul {
    padding: 1.5rem 3rem 1rem 3rem;
}

.discord li {
    color: #aaa;
    font-size: 1.1rem;
    padding-bottom: 0.5rem;
}

.discord-holder {
    width: 75%;
    margin-bottom: 20%;
}

.discord-button {
    background-color: #7289da;
    color: #fff;
    height: 45px;
    width: 100%;
    border-radius: 2px;
    border-color: #5d77d4;
    opacity: 0.9;
}

.discord-button:hover {
    opacity: 1.0;
}

/*=====================================================*/
/*=====================================================*/
.features {
    position: relative;
    background: #2980b9;
    text-align: center;
    padding: 0rem;
}

.features .title {
    font-size: 18vw;
    text-align: center;
    text-shadow: 0px 1px 1px #f6eae1;
    font-weight: 600;
    color: transparent;
}

.icon {
    max-width: 100px;
    margin: 0 auto;
    display: block;
}

.subtext {
    font-size: 0.8rem;
    letter-spacing:1px;
}


.features section::after, .features section::before,
.clips section::before, .clips section::after {
    position: absolute;
    content: '';
    pointer-events: none;
}

.ss-style-zigzag::before, .ss-style-zigzag::after {
    right: 0;
    left: 0;
    z-index: 10;
    display: block;
    height: 90px;
    background-size: 70px 100%;
}

.ss-style-zigzag::before {
    top: -90px;
    background-image: -webkit-gradient(linear, 0 0, 300% 100%, color-stop(0.25, transparent), color-stop(0.25, #2980b9));
    background-image: linear-gradient(315deg, #2980b9 25%, transparent 25%), linear-gradient( 45deg, #2980b9 25%, transparent 25%);
    /*background-position: 50%;*/
}

.ss-style-zigzag::after {
    top: 100%;
    background-image: -webkit-gradient(linear, 0 0, 300% 100%, color-stop(0.25, #2980b9), color-stop(0.25, #2980b9));
    background-image: linear-gradient(135deg, #2980b9 25%, transparent 25%), linear-gradient(225deg, #2980b9 25%, transparent 25%);
    /*background-position: 50%;*/
}

/*=====================================================*/
/*=====================================================*/
.mods {
    position: relative;
    /*background: #ADD7F6;*/
    padding: 4rem 0rem;

    background-image: url(/images/prim6.png);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 60% 0%;
    background-color: #a8ad82;
    background-blend-mode: multiply;
}

.mods .title {
    font-size: 18vw;
    text-align: center;
    text-shadow: 0px 1px 1px #f6eae1;
    font-weight: 600;
    color: transparent;
}

.info-container {
    background: #00000094;
}

.info {
    font-size: 0.9rem;
    text-align: justify;
    letter-spacing: 1px;
    padding: 1.5rem 1rem;
}

.pluglist {
    max-height: 380px;
    border: 1px solid #ababab;
    overflow-y: scroll;
}

.table {
    background: #f5f5f5bd;
}

.tableadjust {
    display: table;
    width: 100%;
}

#style-1::-webkit-scrollbar {
    width: 10px;
}

#style-1::-webkit-scrollbar-thumb {
    background-color: #2980b9;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
}

#style-1::-webkit-scrollbar-track {
    background-color: #F5F5F5;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
}

.ss-style-boxes::after {
    bottom: 0;
    left: 0;
    width: 100%;
    height: 30px;
    background-image: -webkit-gradient(linear, 100% 0, 0 100%, color-stop(0.5, #ADD7F6), color-stop(0.5, #ADD7F6));
    background-image: linear-gradient(to right, #5f5f5f 50%, #FFF 50%);
    -webkit-background-size: 130px 100%;
    background-size: 77px 100%;
}

/*=====================================================*/
/*=====================================================*/
.clips {
    position: relative;
    padding: 1rem 0.5rem 0rem;
}

.clips .title {
    color: #645841;
    font-size: 18vw;
}

.figure-caption h6 {
    font-size: 1.1rem;
}

.figure-caption p {
    font-size: 0.8rem;
}
/* ... */

